# SpinClock

./: .clang-tidy  .gitignore  .sonar-project.properties  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
include/: spinclock.h
src/: CMakeLists.txt  rt_sequencer.c  rt_sequencer.h
tests/: CMakeLists.txt  test_main.c
